ajustes na tela

--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="loadPoke()">
-    <div class="modal modal--inactive">
+    <div class="modal">
         <div class="question">
             <h2>Qual é este pokemon?</h2>
             <input type="text" name="resp" id="" class="question__resp" autofocus=true autocomplete="off">
