projetinho do conversor

--- a/aula-01/index.html
+++ b/aula-01/index.html
@@ -30,64 +30,72 @@
                 </div>
             </section>
             <section class="inputs">
-                <input class="info-input" type="text" name="info" id="info" placeholder="digite a info...">
-                <input class="btn" type="button" value="Calcular">
+                <input class="info-input" type="number" name="info" id="info" placeholder="selecione a unidade...">
+                <input class="btn" type="button" value="Converter">
             </section>
             <section class="result">
                 <div id="mercurio" class="planets">
                     <img src="media/mercurio.png" alt="terra" class="pic">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>250kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
                 <div id="venus" class="planets">
                     <img src="media/venus.png" alt="terra" class="pic">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>128kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
                 <div id="terra" class="planets">
                     <img src="media/planeta-terra.png" alt="terra" class="pic">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>250kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
                 <div id="marte" class="planets">
                     <img src="media/marte.png" alt="terra" class="pic">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>128kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
                 <div id="jupiter" class="planets">
                     <img src="media/jupiter.png" alt="terra" class="pic">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>250kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
                 <div id="saturno" class="planets">
                     <img src="media/saturno.png" alt="terra" class="pic">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>128kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
                 <div id="urano" class="planets">
                     <img src="media/urano.png" alt="terra" class="pic ">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>250kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
                 <div id="netuno" class="planets">
                     <img src="media/netuno.png" alt="terra" class="pic">
                     <div class="result-info">
-                        <h3>Resultado</h3>
-                        <h4>128kgs</h4>
+                        <h2></h2>
+                        <h3></h3>
+                        <h4></h4>
                     </div>
                 </div>
             </section>
