quase finalizado aula 03 mentalista

--- a/aula-03/index.html
+++ b/aula-03/index.html
@@ -15,8 +15,9 @@
         <h1>Mentalista</h1>
     </header>
     <main>
-        <h2>Descubra qual a cor que estou pensando!</h2>
+        <h2 id="info">Descubra qual a cor que estou pensando!</h2>
         <section class="container">
+            <div class="colors cor0"></div>
             <div class="colors cor1"></div>
             <div class="colors cor2"></div>
             <div class="colors cor3"></div>
@@ -27,6 +28,7 @@
             <div class="colors cor8"></div>
             <div class="colors cor9"></div>
             <div class="colors cor10"></div>
+            <div class="colors cor11"></div>
         </section>
         <h2 id="result">3 tentativas restantes</h2>
         <div id="restart">&#128260;</div>
