aula 06 - ajustes de condições e bugs

--- a/aula-06/index.html
+++ b/aula-06/index.html
@@ -19,14 +19,14 @@
     <main>
         <section class="add-driver">
             <select class="players-options" name="players" id="">
-                <option value="Bowser">Bowser</option>
-                <option value="Donkey Kong">Donkey Kong</option>
-                <option value="Luigi">Luigi</option>
-                <option value="Mario">Mario</option>
-                <option value="Peach">Peach</option>
-                <option value="Toad">Toad</option>
-                <option value="Wario">Wario</option>
-                <option value="Yoshi">Yoshi</option>
+                <option value="bowser">Bowser</option>
+                <option value="donkeykong">Donkey Kong</option>
+                <option value="luigi">Luigi</option>
+                <option value="mario">Mario</option>
+                <option value="peach">Peach</option>
+                <option value="toad">Toad</option>
+                <option value="wario">Wario</option>
+                <option value="yoshi">Yoshi</option>
             </select>
             <input class="btn-add" type="button" value="Adicionar">
         </section>
@@ -40,6 +40,7 @@
                         <th>Vitórias</th>
                         <th>Empates</th>
                         <th>Derrotas</th>
+                        <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody>
