ajustes aula 05 e aula 06

--- a/aula-06/index.html
+++ b/aula-06/index.html
@@ -29,6 +29,7 @@
                     <option value="yoshi">Yoshi</option>
                 </select>
                 <input class="btn-add" type="button" value="Adicionar">
+                
             </section>
             <section class="table-container">
                 <table>
@@ -46,6 +47,7 @@
                     <tbody>
                     </tbody>
                 </table>
+                <input class="btn-clear" type="button" value="Limpar Jogadores">
             </section>
         </main>
     </div>
