--- a/aula-07/index.html
+++ b/aula-07/index.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     <main>
-        <h2 class="game-state"></h2>
+        <h2 class="game-state">0</h2>
         <section class="cards-container">
 
             <div class="player1">
